# iot-athome

./: .editorconfig  .gitattributes  .gitignore  .typos.toml  Cargo.toml  README.md  SECURITY.md  _typos.toml  deny.toml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/iot-audit/: Cargo.toml
crates/iot-audit/src/: lib.rs
crates/iot-automation/: Cargo.toml  config.example.toml
crates/iot-automation/src/: engine.rs  expr.rs  lib.rs  main.rs  rule.rs
crates/iot-bus/: Cargo.toml
crates/iot-bus/src/: creds.rs  jetstream.rs  jwt.rs  lib.rs
crates/iot-bus/tests/: cert_rotation.rs  roundtrip.rs  wildcard_replay.rs
crates/iot-cli/: Cargo.toml
crates/iot-cli/src/: history.rs  main.rs  mosquitto.rs  nats.rs  plugin.rs  rule.rs  secfile.rs  secrets.rs
crates/iot-config/: Cargo.toml
crates/iot-config/src/: lib.rs
crates/iot-core/: Cargo.toml
crates/iot-core/src/: id.rs  lib.rs  trust.rs
crates/iot-gateway/: Cargo.toml  config.example.toml
crates/iot-gateway/src/: auth.rs  handlers.rs  json.rs  lib.rs  main.rs  state.rs  stream.rs  tracing_mw.rs
crates/iot-history/: Cargo.toml
crates/iot-history/src/: lib.rs
crates/iot-history/tests/: plain_postgres_compat.rs  postgres_roundtrip.rs
crates/iot-observability/: Cargo.toml
crates/iot-observability/src/: lib.rs  traceparent.rs
crates/iot-plugin-host/: Cargo.toml  config.example.toml
crates/iot-plugin-host/src/: capabilities.rs  component.rs  creds_refresh.rs  lib.rs  main.rs  manifest.rs  mqtt.rs  mqtt_acl.rs  runtime.rs  supervisor.rs
crates/iot-plugin-host/tests/: mqtt_broker.rs  roundtrip.rs  supervisor.rs
crates/iot-plugin-sdk-rust/: Cargo.toml
crates/iot-plugin-sdk-rust/src/: lib.rs
crates/iot-proto/: Cargo.toml  build.rs
crates/iot-proto-core/: Cargo.toml  build.rs
crates/iot-proto-core/src/: lib.rs
crates/iot-proto/src/: headers.rs  lib.rs  subjects.rs
crates/iot-registry/: Cargo.toml  config.example.toml
crates/iot-registry/migrations/postgres/: 20260420000001_initial.sql
crates/iot-registry/migrations/sqlite/: 20260420000001_initial.sql
crates/iot-registry/src/: bus_watcher.rs  lib.rs  main.rs  repo.rs  service.rs
crates/iot-registry/tests/: crud.rs
crates/iot-voice/: Cargo.toml
crates/iot-voice-daemon/: Cargo.toml
crates/iot-voice-daemon/src/: main.rs  sink.rs
crates/iot-voice/src/: audio.rs  cpal_audio.rs  intent.rs  lib.rs  pipeline.rs  piper_synth.rs  rustpotter_wake.rs  stt.rs  synth.rs  wake.rs  wake_vad.rs  whisper.rs
crates/iot-voice/tests/: end_to_end.rs  latency_budget.rs  whisper_smoke.rs
deploy/compose/: dev-stack.yml
deploy/compose/envoy/: envoy.yaml
deploy/compose/grafana/provisioning/datasources/: datasources.yaml
deploy/compose/keycloak/: README.md
deploy/compose/keycloak/realms/: iotathome-dev-realm.json
deploy/compose/loki/: loki.yaml
deploy/compose/mosquitto/: acl.conf  mosquitto.conf
deploy/compose/nats/: nats.conf
deploy/compose/prometheus/: prometheus.yml
deploy/compose/tempo/: tempo.yaml
docs/: IoT-AtHome-Design.docx  LOCAL-CI.md  M1-RETROSPECTIVE.md  M2-PLAN.md  M2-RETROSPECTIVE.md  M3-PLAN.md  M3-RETROSPECTIVE.md  M4-PLAN.md  M4-RETROSPECTIVE.md  M5-PLAN.md  M5a-RETROSPECTIVE.md  M6-PLAN.md  MATTER-PLAN.md  STATUS.md
docs/adr/: 0001-record-architecture-decisions.md  0002-async-runtime-tokio.md  0003-plugin-abi-wasm-component-model.md  0004-nats-subject-taxonomy.md  0005-canonical-device-schema-versioning.md  0006-signing-key-management.md  0007-database-migrations-forward-only.md  0008-error-handling.md  0009-logging-and-tracing.md  0010-config-format-and-layering.md  0011-dev-bus-auth.md  0012-plugin-binding-layer.md  0013-zigbee2mqtt-wasm-migration.md  0014-matter-integration-architecture.md  0015-voice-pipeline-architecture.md
docs/build-doc/: build-doc.js  package-lock.json  package.json
docs/security/: asvs-l2.md  cert-rotation-test.md  etsi-303-645.md  pentest-partners.md  pentest-sow.md  pre-pentest-checklist.md  threat-model.md  tuf-rotation.md
examples/rules/: README.md  cancel-on-intent.yaml  kitchen-fan-hot.yaml  lights-on-by-intent.yaml
panel/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
panel/public/.well-known/: security.txt
panel/src/: App.test.tsx  App.tsx  ErrorBoundary.tsx  index.css  main.tsx
panel/src/api/: client.ts  devices.ts  history.ts  stream.ts
panel/src/auth/: AuthContext.ts  AuthProvider.tsx  oidc.ts
panel/src/pages/: Callback.tsx  DeviceHistory.tsx  Devices.tsx  Home.tsx
plugins/demo-echo/: Cargo.toml  README.md  manifest.yaml
plugins/demo-echo/.cargo/: config.toml
plugins/demo-echo/src/: lib.rs
plugins/matter-bridge/: Cargo.toml  README.md  manifest.yaml
plugins/matter-bridge/src/: lib.rs
plugins/power-meter-3ph/: README.md  manifest.yaml
plugins/sdr433-adapter/: Cargo.toml  manifest.yaml
plugins/sdr433-adapter/src/: lib.rs  state_publisher.rs  translator.rs
plugins/weather-poller/: Cargo.toml  README.md  manifest.yaml
plugins/weather-poller/.cargo/: config.toml
plugins/weather-poller/src/: lib.rs
plugins/zigbee2mqtt-adapter/: Cargo.toml  config.example.toml  manifest.yaml
plugins/zigbee2mqtt-adapter/src/: lib.rs  main.rs  pb.rs  state_publisher.rs  translator.rs
schemas/: buf.gen.yaml  buf.yaml  plugin-manifest.schema.json
schemas/iot/bus/v1/: envelope.proto
schemas/iot/common/v1/: error.proto  ids.proto
schemas/iot/device/v1/: device.proto  entity_event.proto
schemas/iot/registry/v1/: registry_service.proto
schemas/wit/: iot-plugin-host.wit
tools/: listen-smoke.ps1  msvc-env.sh  run-dev.sh  setup-whisper-env.ps1  stop-dev.sh  whisper-smoke.ps1
tools/ci/: ci-local.ps1
tools/devcerts/: README.md  mint.sh
