[workspace]
resolver = "2"
members = [
  "crates/iot-core",
  "crates/iot-proto-core",
  "crates/iot-proto",
  "crates/iot-bus",
  "crates/iot-registry",
  "crates/iot-automation",
  "crates/iot-gateway",
  "crates/iot-plugin-host",
  "crates/iot-plugin-sdk-rust",
  "crates/iot-audit",
  "crates/iot-observability",
  "crates/iot-config",
  "crates/iot-cli",
  # M5a W4.1: optional TimescaleDB-backed long-term history store.
  # Always compiles (sqlx-postgres is already in the workspace dep
  # graph); enabled at runtime via IOT_TIMESCALE_URL env.
  "crates/iot-history",
]
exclude = [
  "firmware/*",
  "services/ml",
  "panel",
  # WASM plugins build standalone for the wasm32-wasip2 target. They're
  # not workspace members because the host target never needs to link
  # their cdylib output. `cargo build` from the plugin directory (with
  # the target pinned in its own .cargo/config.toml) is the entry point.
  "plugins/demo-echo",
  # z2m migrated from a native tokio sidecar (M1) to a WASM plugin
  # against the host MQTT + registry capabilities (M2 W4, ADR-0013).
  "plugins/zigbee2mqtt-adapter",
  # rtl_433 SDR adapter (M5a W3.4, second WASM plugin) — same shape
  # as z2m: host MQTT capability + bus.publish + bus-watcher auto-
  # register. ABI 1.3.0.
  "plugins/sdr433-adapter",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["IoT-AtHome"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/iot-athome/iot-athome"
# Workspace-internal crates aren't published to crates.io; each crate inherits
# this flag via `publish.workspace = true`. cargo-deny treats path deps on
# unpublished crates as valid (vs public-crate wildcards, which it denies).
publish = false

[workspace.dependencies]
# --- async runtime (ADR-0002) ---
tokio = { version = "1.42", default-features = false }
tokio-util = { version = "0.7", default-features = false }
futures = { version = "0.3", default-features = false }
async-trait = "0.1"

# --- error handling (ADR-0008) ---
thiserror = "2.0"
anyhow = "1.0"

# --- observability (ADR-0009) ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }

# --- config (ADR-0010) ---
figment = { version = "0.10", features = ["toml", "env"] }
jsonschema = "0.26"

# --- protobuf / grpc ---
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["tls-webpki-roots"] }
tonic-build = { version = "0.12", default-features = false, features = ["prost", "transport"] }
protox = "0.7"

# --- http / ws ---
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1.5"

# --- bus ---
async-nats = "0.47"

# --- mqtt ---
# use-rustls: mandatory. OpenSSL is banned by ADR-0006 / deny.toml.
# 0.25 was tried — it still hard-pins rustls-webpki 0.102.8 (the
# vulnerable line) for CRL parsing, so the bump didn't move the needle
# on the RUSTSEC-2026-{0049,0098,0099,0104} family. Staying on 0.24
# until rumqttc upstream actually moves to webpki 0.103.x.
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }

# --- storage ---
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "macros", "sqlite", "postgres", "migrate", "chrono", "uuid"] }

# --- crypto / identity ---
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2"
ring = "0.17"
sigstore = "0.10"
# Cosign blob signatures are ECDSA-P256 over SHA-256 in DER-encoded ASN.1,
# with the pubkey shipped as PEM SubjectPublicKeyInfo. `p256` handles exactly
# that envelope without pulling the full sigstore/OCI/Rekor stack. Full
# cosign keyless (Rekor + Fulcio) flow migrates later in M6 (ADR-0006).
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pem", "std"] }
base64 = "0.22"
# `iotctl plugin list` hashes the trust pubkey's SPKI for fingerprinting.
# Already in the dep graph via async-nats / signatory; pinning here so we
# get the same version cargo dedups to.
sha2 = "0.10"
# NATS account identity / per-plugin ed25519 credentials (ADR-0011 follow-up:
# retires dev single-account setup).
nkeys = "0.4"

# --- oidc / auth ---
jsonwebtoken = { version = "10.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# --- serde / ids / time ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# JCS (RFC 8785) canonical JSON — used by iot-audit M3 W1.4 to make the
# hash chain tamper-detectable (the M1/M2 ad-hoc `serde_json::to_string`
# form didn't normalise key order or number encoding).
serde_jcs = "0.1"
serde_yaml = "0.9"
toml = "0.8"
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }

# --- wasm plugin host (ADR-0003) ---
# 36+ required: RUSTSEC-2025-0046, -2025-0118, -2026-0020, -2026-0021,
# -2026-0085, -2026-0086, -2026-0087. Pinning exact per ADR-0003.
wasmtime = { version = "36.0.7", features = ["component-model", "async"] }
wasmtime-wasi = "36.0.7"
wit-bindgen = "0.36"

# --- cli ---
clap = { version = "4.5", features = ["derive", "env"] }

# --- streams ---
tokio-stream = "0.1"

# --- expression / rule engine ---
# Real CEL (Common Expression Language) interpreter, M5a W2 — replaces
# the M3-era hand-rolled subset in iot-automation::expr behind the
# existing `parse`/`eval_bool` facade. Picked from the cel-rust ecosystem
# because it tracks the upstream proto3-CEL spec and ships with serde_json
# `Value` interop (no glue layer needed).
cel-interpreter = "0.10"

# --- testing ---
tokio-test = "0.4"
testcontainers = "0.23"
insta = "1.41"
rstest = "0.23"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Pedantic/nursery suppressions — chosen to keep signal high on real bugs
# while allowing ordinary, readable code. Revisit if a case repeatedly
# bites us.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"                     # flags every uppercase acronym
derive_partial_eq_without_eq = "allow"     # noisy, not load-bearing
missing_const_for_fn = "allow"             # nursery churn
significant_drop_tightening = "allow"      # nursery false positives on locks
option_if_let_else = "allow"               # stylistic
redundant_pub_crate = "allow"              # stylistic
use_self = "allow"                         # verbose in generated code
cognitive_complexity = "allow"             # noisy
branches_sharing_code = "allow"
or_fun_call = "allow"                      # .unwrap_or_else is often fine
result_large_err = "allow"                 # figment::Error + friends are big by design
large_enum_variant = "allow"               # same

# ADR-0008 — panics in libraries are bugs, but warn (not error) so tests
# and the occasional #[allow] remain usable.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = true

[profile.release-debuginfo]
inherits = "release"
strip = "none"
debug = true

[profile.dev]
opt-level = 0
# Full DWARF/PDB debug info for our own crates; keep heavy generated-code
# deps (cel-interpreter's antlr4rust tree-builder is ~150k symbols) at
# `line-tables-only` to stay under the Windows MSVC PDB symbol cap
# (LNK1318). The override is per-package so backtraces in our crates
# remain rich.
debug = true
incremental = true

# antlr4rust ships with derive-heavy generated tree types that blow
# past Windows linker's PDB symbol limit when full debug info is
# emitted on every test target. Cap them to line tables; backtraces
# inside antlr generated code are unreadable anyway.
[profile.dev.package.antlr4rust]
debug = "line-tables-only"
[profile.dev.package.cel-parser]
debug = "line-tables-only"
[profile.dev.package.cel-interpreter]
debug = "line-tables-only"

[profile.test]
opt-level = 1
# Mirror the dev-profile cap: test binaries link the same antlr4rust
# tree so the PDB pressure is identical.
[profile.test.package.antlr4rust]
debug = "line-tables-only"
[profile.test.package.cel-parser]
debug = "line-tables-only"
[profile.test.package.cel-interpreter]
debug = "line-tables-only"
