[package]
name = "iot-automation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "IoT-AtHome — automation engine (rule DAG + CEL evaluator)."

[lints]
workspace = true

[[bin]]
name = "iot-automation"
path = "src/main.rs"

[dependencies]
iot-core = { path = "../iot-core" }
iot-proto = { path = "../iot-proto" }
# Prost messages for `iot.device.v1.EntityState` decode — the engine
# unwraps protobuf state payloads so rule authors see `payload.value`
# regardless of whether the adapter published JSON or protobuf.
iot-proto-core = { path = "../iot-proto-core" }
iot-bus = { path = "../iot-bus" }
iot-audit = { path = "../iot-audit" }
iot-config = { path = "../iot-config" }
iot-observability = { path = "../iot-observability" }

anyhow.workspace = true
# Engine loop calls StreamExt::next on the bus subscription.
futures.workspace = true
# EntityState protobuf decode.
prost.workspace = true
prost-types.workspace = true
# M3 W2: rule YAML parser + mini-expression evaluator. The evaluator
# consumes JSON payloads at runtime so serde_json is on the critical
# path; yaml for the rule file format.
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
# Engine idempotency cache keys: rule_id + subject + payload hash.
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
