[package]
name = "iot-bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "IoT-AtHome — NATS JetStream client wrapper with mTLS and trace-propagation defaults."

[lints]
workspace = true

[dependencies]
iot-core = { path = "../iot-core" }
iot-proto = { path = "../iot-proto" }
# Task-local TraceContext propagation — `current_traceparent()`
# reads from the active `with_context` scope so outbound publishes
# automatically carry the caller's trace id.
iot-observability = { path = "../iot-observability" }

async-nats.workspace = true
async-trait.workspace = true
# NATS JWT auth — M3 W1.3 mints user JWTs from per-plugin nkey seeds
# (the seeds M2 W3 wrote to `<plugin_dir>/<id>/nats.nkey`).
nkeys.workspace = true
base64.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true

[dev-dependencies]
testcontainers.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
# Cert minting for the cert-rotation tests (M6 W2.5). Pure-Rust
# X.509 + ECDSA-P256 leaf generation; no openssl shell-out, no
# CMake. The generated certs land in tempdir-scoped paths that
# match what `iot_bus::Config` expects on disk.
rcgen = { version = "0.13", default-features = false, features = ["pem", "crypto", "ring"] }
tempfile = "3.14"
rustls = { workspace = true, default-features = false, features = ["ring", "std"] }
rustls-pemfile.workspace = true
