[package]
name = "iot-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "IoT-AtHome — iotctl admin CLI."

[lints]
workspace = true

[[bin]]
name = "iotctl"
path = "src/main.rs"

[dependencies]
iot-core = { path = "../iot-core" }
iot-proto = { path = "../iot-proto" }
iot-bus = { path = "../iot-bus" }
# `iotctl history prune` (M6 W2) talks to the Timescale backend
# directly via the same library the host wires up at runtime.
iot-history = { path = "../iot-history" }
iot-observability = { path = "../iot-observability" }
# `iotctl plugin install` reuses the host's manifest parser so the CLI and
# the runtime agree on what a valid manifest is, byte-for-byte.
iot-plugin-host = { path = "../iot-plugin-host" }
# `iotctl rule {add,list,test,…}` shares the rule compiler + expression
# evaluator with the engine, so a rule that validates on the CLI is a
# rule the engine can load.
iot-automation = { path = "../iot-automation" }

anyhow.workspace = true
async-nats.workspace = true
base64.workspace = true
# `iotctl history prune --before <rfc3339>` parses operator
# timestamps via chrono's RFC 3339 parser (M6 W2).
chrono = { workspace = true, features = ["serde"] }
clap.workspace = true
futures.workspace = true
nkeys.workspace = true
p256.workspace = true
prost.workspace = true
# Used both by the install path's signature-verification (dev-deps) AND
# by the runtime path's `generate_jti` for fresh JWT identifiers — the
# audit's H1 fix needs an OS-random source out of the test gate.
rand_core = { version = "0.6", features = ["std"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tonic.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
# Integration test signs a synthetic plugin.wasm with a freshly-generated
# P-256 key, then verifies the install path accepts it. Needs the
# `signing` feature + an OS random generator (the latter inherited from
# the main `rand_core` dep above).
p256 = { workspace = true, features = ["ecdsa", "pem", "std"] }
tempfile = "3.14"
