[package]
name = "iot-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "IoT-AtHome — layered TOML + env config loader with JSON Schema validation (ADR-0010)."

[lints]
workspace = true

[dependencies]
figment.workspace = true
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
rstest.workspace = true
