[package]
name = "iot-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "IoT-AtHome — HTTP + WebSocket gateway in front of Envoy (ADR-0009, design §11)."

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "iot-gateway"
path = "src/main.rs"

[dependencies]
iot-core = { path = "../iot-core" }
iot-proto = { path = "../iot-proto" }
iot-bus = { path = "../iot-bus" }
iot-config = { path = "../iot-config" }
iot-observability = { path = "../iot-observability" }
# M5a W4.1: read-side of the optional long-term history backend.
# Same env-driven opt-in as the registry's write-side; absent env →
# `/devices/{id}/history` returns 503 with code `history.disabled`.
iot-history = { path = "../iot-history" }

anyhow.workspace = true
async-nats.workspace = true
axum.workspace = true
base64 = "0.22"
chrono.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net", "sync"] }
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
