[package]
name = "iot-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "IoT-AtHome — tracing bootstrap (ADR-0009)."

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
# M3 W2.4 traceparent generation — OS randomness for trace / span IDs.
# getrandom is already transitive via many other deps; pinning as a
# direct dep so the fallback feature set stays under our control.
getrandom = "0.2"
