[package]
name = "iot-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "IoT-AtHome — tracing bootstrap (ADR-0009)."

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
# M3 W2.4 traceparent generation — OS randomness for trace / span IDs.
# getrandom is already transitive via many other deps; pinning as a
# direct dep so the fallback feature set stays under our control.
getrandom = "0.2"
# M3 W2.6 task-local trace context propagation. The `task_local!`
# macro lets us carry the active TraceContext implicitly through an
# async call tree — handlers set it on entry, bus.publish reads it,
# no per-call argument threading.
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
# with-context task-local tests spawn tokio tasks.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
