[package]
name = "iot-plugin-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "IoT-AtHome — Wasmtime-based plugin host with capability enforcement (ADR-0003)."

[lints]
workspace = true

[[bin]]
name = "iot-plugin-host"
path = "src/main.rs"

[dependencies]
iot-core = { path = "../iot-core" }
iot-proto = { path = "../iot-proto" }
iot-bus = { path = "../iot-bus" }
iot-config = { path = "../iot-config" }
iot-observability = { path = "../iot-observability" }

anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
wasmtime.workspace = true
# The wasm32-wasip2 target's preview-2 adapter links wasi:cli/stdin/etc.
# imports even for plugins that never call stdio; we satisfy those by
# wiring wasmtime-wasi's linker adder.
wasmtime-wasi.workspace = true
