[package]
name = "iot-plugin-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "IoT-AtHome — Wasmtime-based plugin host with capability enforcement (ADR-0003)."

[lints]
workspace = true

[[bin]]
name = "iot-plugin-host"
path = "src/main.rs"

[dependencies]
iot-core = { path = "../iot-core" }
iot-proto = { path = "../iot-proto" }
iot-bus = { path = "../iot-bus" }
iot-audit = { path = "../iot-audit" }
iot-config = { path = "../iot-config" }
iot-observability = { path = "../iot-observability" }

anyhow.workspace = true
async-trait.workspace = true
# Host owns the one MQTT broker connection per process and fans out
# inbound messages to plugins via MqttRouter. See ADR-0013.
rumqttc.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
# Registry host capability (ABI 1.2.0+, transitional per ADR-0013)
# wraps a tonic gRPC client — the channel lives in HostBindings.
tonic.workspace = true
tracing.workspace = true
wasmtime.workspace = true
# ABI 1.4.0 net.http capability — outbound HTTP for plugins polling
# external APIs. The shared client lives in HostBindings; per-call
# URL is checked against capabilities.net.outbound first.
reqwest.workspace = true
# The wasm32-wasip2 target's preview-2 adapter links wasi:cli/stdin/etc.
# imports even for plugins that never call stdio; we satisfy those by
# wiring wasmtime-wasi's linker adder.
wasmtime-wasi.workspace = true

[dev-dependencies]
# Supervisor DLQ marker tests write into a temp dir.
tempfile = "3.14"
# Broker integration test spins a Mosquitto 2.x container with an
# inline anonymous-enabling config.
testcontainers.workspace = true
